--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ html, body {
   height: 100%;
   min-height: 420px;
   margin: 0;
-  /* overflow: hidden; /* disable scrolling */ */
+  /* overflow: hidden; */
 }
 
 body {
@@ -48,7 +48,8 @@ a {
   flex-flow: column;
   flex-grow: 1;
   padding-left: 3em;
-  padding-right: 3em;
+  /* padding-right: 3em; */
+  /* align-items: center; */
 }
 
 .main-content-area {
@@ -56,37 +57,40 @@ a {
   flex-flow: column;
   flex-grow: 1;
   width: 320px;
-  padding: 2em 0 1em;
+  /* padding: 2em 0 1em; */
+  justify-content: center;
   /* background-color: red; */
-}
-
-.brand-area {
-  font-size: 1.5em;
-  line-height: 0em;
-  font-weight: bold;
-}
-
-.brand-area .trademark {
-  font-size: smaller;
 }
 
 .site-footer {
   display: flex;
-  flex-flow: row;
-  border-top: 2px black solid;
+  flex-flow: column;
 }
 
-.site-footer div {
-  /* background-color: blue; */
+.footer-brand {
+  font-size: 1.5em;
+  line-height: 0em;
+  font-weight: bold;
+  border-bottom: 2px black solid;
+  padding-left: 2em;
+}
+
+.footer-brand .trademark {
+  font-size: smaller;
+}
+.footer-info {
+  display: flex;
+}
+
+.footer-info div {
   padding-left: 3em;
   padding-bottom: .75em;
-  /* padding-top: .1em; */
-  line-height: .1em;
 }
 
 .site-footer .year {
   flex-grow: 3;
   border-right: 2px black solid;
+  line-height: 0;
 }
 
 .site-footer .year p {
@@ -98,13 +102,17 @@ a {
   font-family: Swiss721;
   font-size: 1em;
   text-transform: uppercase;
-  padding-top: 1em;
+  padding-top: .1em;
   padding-left: 3em;
 }
 
 @media screen and (min-width: 810px) {
-  .content-area, .site-footer .year, .site-footer .stay-cool {
+  .content-area, .footer-info div {
     padding-left: 4em;
+  }
+
+  .footer-brand {
+    padding-left: 2.65em;
   }
 }
 
@@ -118,6 +126,7 @@ a {
   width: 100%;
   padding: .5em;
   box-sizing: border-box;
+  margin-top: 2.6em;
 }
 
 .projects-container p {
@@ -204,11 +213,16 @@ a {
   text-align: center;
 }
 
+.satisfaction-guaranteed p {
+  margin: .25em;
+}
+
+.email {
+  font-weight: bold;
+  font-size: 1.2em;
+}
+
 .ingredients {
   text-align: left;
   font-size: .9em;
-}
-
-.satisfaction-guaranteed p {
-  margin: .25em;
 }
