--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 /* Main Styling */
 html, body {
   height: 100%;
-  min-height: 420px;
+  /* min-height: 420px; */
   margin: 0;
   /* overflow: hidden; */
 }
@@ -45,6 +45,7 @@ a {
       -ms-flex-flow: column;
           flex-flow: column;
   height: 100%;
+  min-height: 420px;
 }
 
 .content-area {
