--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,11 @@
 
 /* Main Styling */
 html, body {
-  height: 100%;
+  height: 100vh;
+  min-height: 100vh;
   /* min-height: 420px; */
   margin: 0;
-  overflow: auto;
+  /* overflow: scroll; */
 }
 
 body {
