Projects header is red to test on iPhone

--- a/css/style.css
+++ b/css/style.css
@@ -199,6 +199,7 @@ a {
       -ms-flex-flow: column;
           flex-flow: column;
   border-bottom: 3px black solid;
+  color: red;
 }
 
 .portfolio-project-amounts {
