--- a/css/style.css
+++ b/css/style.css
@@ -251,6 +251,10 @@ a {
   font-weight: bold;
 }
 
+.portfolio-title .framework {
+  font-weight: normal;
+}
+
 .side-project {
   display: -webkit-box;
   display: -ms-flexbox;
