--- a/css/keyboard.css
+++ b/css/keyboard.css
@@ -2,7 +2,7 @@ body {
   color: rgba(0, 0, 0, .74);
   font-size: 16px;
   line-height: 20px;
-    
+
   -webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
   -moz-animation: fadein 3s; /* Firefox < 16 */
   -ms-animation: fadein 3s; /* Internet Explorer */
@@ -112,15 +112,20 @@ div[contenteditable] {
   text-align: center;
 }
 
-div[contenteditable][placeholder]:empty:after { 
+div[contenteditable][placeholder]:empty:after {
   content: attr(placeholder);
 }
 
 #colorBox {
-    text-transform: uppercase;
+  padding-top: 1em;
+  text-transform: uppercase;
+  font-style: italic;
+  color: #b9b9b9;
+  cursor:text;
 }
 
 #textBox {
+  padding-top: 1em;
   display:none;
   text-transform: none;
 }
@@ -262,6 +267,7 @@ div[contenteditable][placeholder]:empty:after {
 }
 
 .social-icon-link {
+  color: rgba(0, 0, 0, .74);
   margin-right: 4px;
   margin-left: 4px;
   padding: 3px;
