Change background color

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
   /* Original color */
   /* background-color: #FFF000; */
   /* New color */
-  background-color: #FED700;
+  background-color: #FEE600;
   color: black;
   font-family: Helvetica;
 }
