--- a/css/keyboard.css
+++ b/css/keyboard.css
@@ -1,42 +1,36 @@
-body {
-  color: rgba(0, 0, 0, .74);
-  font-size: 16px;
-  line-height: 20px;
-
-  -webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
-  -moz-animation: fadein 3s; /* Firefox < 16 */
-  -ms-animation: fadein 3s; /* Internet Explorer */
-  -o-animation: fadein 3s; /* Opera < 12.1 */
-    animation: fadein 3s;
-}
+/* Page Load Animation */
 
 @keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+  from { opacity: 0; }
+  to   { opacity: 1; }
 }
 
 /* Firefox < 16 */
 @-moz-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+  from { opacity: 0; }
+  to   { opacity: 1; }
 }
 
 /* Safari, Chrome and Opera > 12.1 */
 @-webkit-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+  from { opacity: 0; }
+  to   { opacity: 1; }
 }
 
 /* Internet Explorer */
 @-ms-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+  from { opacity: 0; }
+  to   { opacity: 1; }
 }
 
 /* Opera < 12.1 */
 @-o-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+*:focus {
+  outline: 2px solid #595959;
 }
 
 h1 {
@@ -57,40 +51,6 @@ h2 {
   font-weight: 700;
 }
 
-h3 {
-  margin-top: 0px;
-  margin-bottom: 10px;
-  font-family: Montserrat, sans-serif;
-  font-size: 20px;
-  line-height: 28px;
-  font-weight: 400;
-}
-
-h4 {
-  margin-top: 0px;
-  margin-bottom: 10px;
-  font-family: Montserrat, sans-serif;
-  font-size: 17px;
-  line-height: 24px;
-  font-weight: 700;
-}
-
-h5 {
-  margin-top: 0px;
-  margin-bottom: 10px;
-  font-size: 14px;
-  line-height: 19px;
-  font-weight: 700;
-}
-
-h6 {
-  margin-top: 0px;
-  margin-bottom: 10px;
-  font-size: 12px;
-  line-height: 18px;
-  font-weight: 700;
-}
-
 p {
   margin-top: 0px;
   margin-bottom: 25px;
@@ -98,229 +58,91 @@ p {
   line-height: 24px;
 }
 
-div[contenteditable] {
-  display: block;
-  border: 1px solid black;
-  outline: none;
-  min-height: 200px;
-  padding: 10px;
-  font-family: Montserrat, sans-serif;
-  opacity: .75;
-  font-size: 20px;
-  line-height: 25px;
-  font-weight: 400;
-  text-align: center;
+html {
+  height: 100%;
+  max-width: 100%;
 }
 
-div[contenteditable][placeholder]:empty:after {
-  content: attr(placeholder);
-}
-
-#colorBox {
-  padding-top: 1em;
-  text-transform: uppercase;
-  font-style: italic;
-  color: #b9b9b9;
-  cursor:text;
-}
-
-#textBox {
-  padding-top: 1em;
-  display:none;
-  text-transform: none;
-}
-
-.button {
-  display: inline-block;
-  padding: 11px 20px;
-  border-radius: 3px;
-  background-color: #3b99d9;
-  -webkit-transition: background-color 300ms ease;
-  transition: background-color 300ms ease;
-  color: #fff;
-  font-size: 16px;
-  line-height: 20px;
-  text-align: center;
-  text-decoration: none;
-}
-
-.button:hover {
-  background-color: #000;
-}
-
-.button.w--current {
-  background-color: #2e80b6;
-}
-
-.button.white {
-  background-color: #fff;
-  color: #000;
-}
-
-.button.white:hover {
-  background-color: hsla(0, 0%, 100%, .77);
-}
-
-.button.black {
-  background-color: #404047;
-}
-
-.button.black:hover {
-  background-color: #1db0fc;
-}
-
-.button.black.with-field {
-  width: 22%;
-  margin-left: 2%;
-  float: left;
-}
-
-.button.full-width {
-  display: block;
-  width: 100%;
-  background-color: #3b99d9;
-}
-
-.button.small {
-  padding: 7px 12px;
-  background-color: #3b99d9;
-  font-size: 11px;
-  line-height: 14px;
-  text-transform: uppercase;
-}
-
-.button.small:hover {
-  background-color: #2c74a4;
-}
-
-.button.tab {
-  margin-right: 8px;
-  margin-left: 8px;
-  background-color: #bfbfbf;
-}
-
-.button.tab:hover {
-  background-color: #7e7e7e;
-}
-
-.button.tab.w--current {
-  background-color: #3b99d9;
-}
-
-.navigation-bar {
-  margin-top: 45px;
-  text-align: center;
-}
-
-.navigation-bar.dark {
-  background-color: #5d5d5d;
-}
-
-.navigation-bar.top {
-  margin-top: 58px;
-  margin-bottom: 124px;
-  border-radius: 5px;
-  background-color: #fff;
-}
-
-.section {
-  position: relative;
-  padding-right: 2.5%;
-  padding-left: 2.5%;
-  background-color: #fff;
-}
-
-.header-section {
-  padding-top: 76px;
-  padding-bottom: 76px;
-  text-align: center;
-}
-
-.hollow-button {
-  display: inline-block;
-  margin-right: 10px;
-  margin-left: 10px;
-  padding: 9px 20px;
-  border: 2px solid #3b99d9;
-  border-radius: 4px;
-  -webkit-transition: background-color 300ms ease, border 300ms ease, color 300ms ease;
-  transition: background-color 300ms ease, border 300ms ease, color 300ms ease;
-  color: #3b99d9;
-  font-size: 16px;
-  line-height: 20px;
-  text-decoration: none;
-}
-
-.hollow-button:hover {
-  border-color: #000;
-  color: #000;
-}
-
-.hollow-button.white {
-  border-color: #fff;
-  color: #fff;
-}
-
-.hollow-button.white:hover {
-  border-color: hsla(0, 0%, 100%, .64);
-  color: hsla(0, 0%, 100%, .72);
-}
-
-.social-icon-link {
+body {
+  height: 100%;
   color: rgba(0, 0, 0, .74);
-  margin-right: 4px;
-  margin-left: 4px;
-  padding: 3px;
-  opacity: 0.9;
+  font-size: 16px;
+  line-height: 20px;
+
+  -webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 3s; /* Firefox < 16 */
+  -ms-animation: fadein 3s; /* Internet Explorer */
+  -o-animation: fadein 3s; /* Opera < 12.1 */
+    animation: fadein 3s;
+}
+
+/* .wrapper {
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+} */
+
+/* Header */
+header {
+  padding-top: 35px;
+  padding-bottom: 30px;
+  text-align: center;
+}
+
+.header-home-link {
   -webkit-transition: opacity 200ms ease;
   transition: opacity 200ms ease;
-}
-
-.social-icon-link:hover {
-  opacity: 0.37;
-}
-
-.footer {
-  padding-top: 41px;
-  padding-bottom: 41px;
-  border-top: 1px solid rgba(0, 0, 0, .13);
-  text-align: center;
-}
-
-.footer-text {
-  margin-top: 8px;
   font-family: Montserrat, sans-serif;
-  color: #a8a8a8;
-  font-size: 13px;
+  color: #303030;
+  text-decoration: none;
+}
+
+.header-home-link:hover {
+  opacity: 0.82;
+}
+
+.header-name {
+  display: inline-block;
+  padding: 0px 70px;
+  margin-bottom: 0px;
+  font-size: 53px;
+  line-height: 57px;
+  letter-spacing: 1px;
+  -webkit-transition: color 300ms ease;
+  transition: color 300ms ease;
   text-transform: uppercase;
 }
 
-.footer-link {
-  display: block;
-  margin-bottom: 6px;
-  color: rgba(0, 0, 0, .74);
-  text-decoration: none;
-  -webkit-transition: color 200ms ease;
-  transition: color 200ms ease;
+.header-name:hover {
+  color: #6d6d6d;
 }
 
-.footer-link:hover {
-  color: #b9b9b9;
+.rainbow-text:hover {
+  background-image: repeating-linear-gradient(to left, pink, #af9dd3, #85b4f5, #b2e21b, #e0ee00, #ffb400, #cc0000);
+  background-size: 300%;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  animation: rainbow 8s ease infinite;
 }
 
-.footer-link.with-icon {
-  margin-left: 30px;
+@keyframes rainbow { 
+  0% {background-position:0% 50%;}
+  50% {background-position:100% 25%;}
+  100% {background-position:0% 50%;}
 }
 
-.link {
-  display: block;
-  margin-bottom: 10px;
-  color: #3b99d9;
-  text-decoration: none;
+.rainbow-text-still:hover {
+  background-image: linear-gradient(to left, pink, #af9dd3, #85b4f5, #b2e21b, #e0ee00, #ffb400, #cc0000);   
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
 }
 
-.link:hover {
-  text-decoration: underline;
+/* Navigation */
+nav {
+  margin-top: 10px;
+  text-align: center;
 }
 
 .nav-link {
@@ -331,8 +153,8 @@ div[contenteditable][placeholder]:empty:after {
   -webkit-transition: color 200ms ease;
   transition: color 200ms ease;
   font-family: Montserrat, sans-serif;
-  color: #b9b9b9;
-  font-size: 12px;
+  color: #595959;
+  font-size: 16px;
   line-height: 18px;
   text-align: center;
   letter-spacing: 2px;
@@ -341,17 +163,69 @@ div[contenteditable][placeholder]:empty:after {
 }
 
 .nav-link:hover {
-  color: #303030;
+  color: #b9b9b9;
 }
 
 .nav-link.w--current {
-  color: #303030;
+  color: #b9b9b9;
 }
 
-.main-image {
-  margin-bottom: 39px;
+/* Rainbow Box */
+main {
+  height: 100%;
+  position: relative;
+  padding-right: 2.5%;
+  padding-left: 2.5%;
+  background-color: #fff;
 }
 
+.content-wrapper {
+  display: block;
+  width: 50%;
+  max-width: 100%;
+  height: 100%;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+#colorBox {
+  height: 100%;
+  text-transform: uppercase;
+  font-style: italic;
+  color: #b9b9b9;
+  cursor:text;
+  caret-color: #595959;
+}
+
+#textBox {
+  height: 100%;
+  /* padding-top: 1em; */
+  display:none;
+  text-transform: none;
+}
+
+div[contenteditable] {
+  display: block;
+  border: 0px solid #B9B9B9;
+  outline: none;
+  min-height: 200px;
+  padding: 10px 10px 0px 10px;
+  font-family: Montserrat, sans-serif;
+  opacity: .75;
+  font-size: 20px;
+  line-height: 25px;
+  font-weight: 400;
+}
+
+div[contenteditable][placeholder] {
+  text-align: left;
+}
+
+div[contenteditable][placeholder]:empty:after {
+  content: attr(placeholder);
+}
+
+/* Byline */
 .byline-wrapper {
   margin-bottom: 25px;
   color: #ccc;
@@ -382,62 +256,56 @@ div[contenteditable][placeholder]:empty:after {
   font-family: Montserrat, sans-serif;
 }
 
-.blog-post {
-  margin-bottom: 100px;
-}
-
-.blog-home-link {
-  -webkit-transition: opacity 200ms ease;
-  transition: opacity 200ms ease;
-  font-family: Montserrat, sans-serif;
-  color: #303030;
-  text-decoration: none;
-}
-
-.blog-home-link:hover {
-  opacity: 0.82;
-}
-
-.blog-name {
-  display: inline-block;
-  margin-bottom: 0px;
-  font-size: 53px;
-  line-height: 57px;
-  letter-spacing: 1px;
-  -webkit-transition: color 300ms ease;
-  transition: color 300ms ease;
-}
-
-.blog-name:hover {
-  color: #6d6d6d;
-}
-
-.blog-headline {
-  display: block;
-  font-family: Montserrat, sans-serif;
-  font-size: 20px;
-  line-height: 25px;
-  font-weight: 400;
+/* Footer */
+footer {
+  margin-top: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  border-top: 0px solid #ebebeb;
   text-align: center;
+}
+
+.footer-text {
+  margin-top: 8px;
+  font-family: Montserrat, sans-serif;
+  color: #a8a8a8;
+  font-size: 13px;
   text-transform: uppercase;
 }
 
-.heading-wrapper {
-  display: block;
-  width: 60%;
-  margin-right: auto;
-  margin-left: auto;
+.footer-link {
+  margin-bottom: 6px;
+  color: rgba(0, 0, 0, .74);
+  text-decoration: none;
+  -webkit-transition: color 200ms ease;
+  transition: color 200ms ease;
 }
 
-.post-link {
+.footer-link:hover {
+  color: #b9b9b9;
+}
+
+.footer-link.with-icon {
+  margin-left: 30px;
+}
+
+.social-icon-link {
+  color: rgba(0, 0, 0, .74);
+  margin-right: 4px;
+  margin-left: 4px;
+  padding: 3px;
+  opacity: 0.9;
   -webkit-transition: opacity 200ms ease;
+  text-decoration: none;
   transition: opacity 200ms ease;
 }
 
-.post-link:hover {
-  opacity: 0.85;
+.social-icon-link:hover {
+  opacity: 0.37;
 }
 
+/* I need to revisit these rules */
+/* Responsiveness */
 @media (max-width: 767px) {
   .navigation-bar {
     margin-top: 21px;
@@ -446,11 +314,8 @@ div[contenteditable][placeholder]:empty:after {
     padding-top: 38px;
     padding-bottom: 38px;
   }
-  .main-image {
-    margin-bottom: 34px;
-  }
-  .heading-wrapper {
-    width: 80%;
+  .content-wrapper {
+    width: 75%;
   }
 }
 
@@ -461,7 +326,7 @@ div[contenteditable][placeholder]:empty:after {
     margin-left: 10px;
     padding-right: 0px;
     padding-left: 0px;
-    border: 1px none #b9b9b9;
+    border: 1px none #595959;
     border-radius: 0px;
     letter-spacing: 2px;
   }
@@ -472,7 +337,7 @@ div[contenteditable][placeholder]:empty:after {
     font-size: 50px;
     line-height: 54px;
   }
-  .heading-wrapper {
-    width: 90%;
+  .content-wrapper {
+    width: 75%;
   }
 }
