--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,11 @@ a {
   color: #000;
 }
 
+a:hover {
+  opacity: 0.5;
+  transition: opacity 400ms ease;
+}
+
 .personal-website .personal {
   display: block;
   font-size: 1em;
@@ -209,7 +214,8 @@ a {
 }
 
 .portfolio-projects {
-  border-bottom: 3px black solid;
+  border-bottom: 6px black solid;
+  padding-top: 2px;
 }
 
 .portfolio-project {
@@ -275,6 +281,17 @@ a {
 
 .side-project:last-child, .portfolio-project:last-child .portfolio-project-links {
   border-bottom: none;
+}
+
+.projects-footnote {
+  border-top: 4px solid black;
+  display: flex;
+  font-size: 0.8em;
+  padding-top: 4px;
+}
+
+.projects-footnote p {
+  margin-bottom: 0;
 }
 
 /* End Projects Styles */
@@ -343,3 +360,21 @@ a {
 }
 
 /* End Media Query */
+
+/* Rainbow Text */
+
+.rainbow-text:hover {
+  background-image: repeating-linear-gradient(to left, pink, #af9dd3, #85b4f5, #b2e21b, #e0ee00, #ffb400, #cc0000);
+  background-size: 300%;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  opacity: 100;
+  animation: rainbow 8s ease infinite;
+}
+
+@keyframes rainbow { 
+  0% {background-position:0% 50%;}
+  50% {background-position:100% 25%;}
+  100% {background-position:0% 50%;}
+}
